update for the recently added 'Scrollbar Width/Position' settings (FS#10538)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22415 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -235,6 +235,9 @@
         remote statusbar & off, top, bottom & N/A\\
       }
       scrollbar     & on, off           & N/A\\
+      scrollbar pos & left, right       & N/A\\
+      scrollbar width & 3 to LCD width / 10 (\fixme{devise a way
+                    to get ranges from config-*.h})& pixels\\
       volume display
                     & graphic, numeric  & N/A\\
       battery display
