Combine the settings for scrollbar on/off and its position into one with three possible values
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22425 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/display_options.tex
+++ b/manual/configure_rockbox/display_options.tex
@@ -196,11 +196,10 @@
     \item[Status/Scrollbar:]
       Settings related to on screen status display and the scrollbar.
       \begin{description}
-      \item[Scroll Bar:] Enables or disables the vertical scroll bar.
+      \item[Scroll Bar:] Allows you to choose where the vertical scroll bar
+        should appear.
       \item[Scroll Bar Width:] Allows you to choose the width of the
         scroll bar (in pixels).  Default value is 6.
-      \item[Scroll Bar Position:] Allows you to choose where the scroll bar
-        should appear.
       \item[Status Bar:] Allows you to choose where to display the 
         statusbar\opt{remote}{ on the main display}. 
       \opt{remote}{
