--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -234,8 +234,7 @@
       \opt{remote}{
         remote statusbar & off, top, bottom & N/A\\
       }
-      scrollbar     & on, off           & N/A\\
-      scrollbar pos & left, right       & N/A\\
+      scrollbar     & off, left, right  & N/A\\
       scrollbar width & 3 to LCD width / 10 (\fixme{devise a way
                     to get ranges from config-*.h})& pixels\\
       volume display
