Dutch translation: be consistent w.r.t. scrollbar
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22430 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/nederlands.lang
+++ b/apps/lang/nederlands.lang
@@ -12585,11 +12585,11 @@
   </source>
   <dest>
     *: none
-    lcd_bitmap: "Scrollbar breedte"
+    lcd_bitmap: "Scroll balk breedte"
   </dest>
   <voice>
     *: none
-    lcd_bitmap: "Scroll bar breedte"
+    lcd_bitmap: "Scroll balk breedte"
   </voice>
 </phrase>
 <phrase>
@@ -12602,10 +12602,10 @@
   </source>
   <dest>
     *: none
-    lcd_bitmap: "Scrollbar positie"
+    lcd_bitmap: "Scroll balk positie"
   </dest>
   <voice>
     *: none
-    lcd_bitmap: "Scroll bar positie"
+    lcd_bitmap: "Scroll balk positie"
   </voice>
 </phrase>
