--- a/apps/lang/deutsch.lang
+++ b/apps/lang/deutsch.lang
@@ -279,7 +279,7 @@
   user: core
   <source>
     *: "PLAY = Yes"
-    cowond2*: "MENU = Ja"
+    cowond2*: "MENU = Yes"
     h100,h120,h300: "NAVI = Yes"
     yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
