--- a/apps/lang/tagalog.lang
+++ b/apps/lang/tagalog.lang
@@ -260,12 +260,14 @@
  user: core
  <source>
     *: "PLAY = Yes"
+    cowond2*: "MENU = Yes"
     h100,h120,h300: "NAVI = Yes"
     yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,clip*,fuze*: "SELECT = Yes"
     player: "(PLAY/STOP)"
  </source>
  <dest>
     *: "PLAY = Oo"
+    cowond2*: "MENU = Oo"
     h100,h120,h300: "NAVI = Oo"
     yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,clip*,fuze*: "SELECT = Oo"
     player: "(PLAY/STOP)"
